<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CSELL</string>
    <string name="product">Sản phẩm</string>
    <string name="customer">Khách hàng</string>
    <string name="social">Cộng đồng</string>
    <string name="friend">Bạn bè</string>
    <string name="notification">Thông báo</string>
    <string name="add_product">Thêm sản phẩm</string>
    <string name="delete_product">Xóa sản phẩm</string>
    <string name="edit_product">Sửa sản phẩm</string>
    <string name="no_product">Chưa có sản phẩm.</string>
    <string name="choose_product">Chọn sản phẩm</string>
    <string name="info_product">Thông tin sản phẩm</string>
    <string name="post_product">Đăng sản phẩm</string>
    <string name="un_follow_product">Bỏ theo dõi sản phẩm</string>
    <string name="follow_product">Theo dõi sản phẩm</string>
    <string name="filter_product">Lọc sản phẩm</string>
    <string name="reup_product">Re-Up sản phẩm</string>
    <string name="product_interest">Sản phẩm quan tâm</string>
    <string name="text_done_created_product_to_csell">Bạn có muốn sản phẩm này được hiển thị trên cộng đồng CSELL?</string>
    <string name="setting">Cài đặt</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="all">Tất cả</string>
    <string name="add_note">Thêm ghi chú</string>
    <string name="enter_price_or_leave_blank">Nhập giá hoặc để trống</string>
    <string name="mileage_">Số Km:</string>
    <string name="address_">Địa chỉ:</string>
    <string name="add_private_content_with_">Thêm nội dung riêng tư với…</string>
    <string name="save">Lưu</string>
    <string name="cancel">Hủy</string>
    <string name="owner">Chủ sở hữu</string>
    <string name="cost_optional">Giá vốn(tùy chọn)</string>
    <string name="done">Xong</string>
    <string name="txt_info_warning_private_mode">*Lưu ý:
Nhằm bảo mật thông tin tốt hơn, các thông tin về chủ sở hữu sẽ chỉ hiển thị khi chế độ cá nhân được bật.</string>
    <string name="add_details_">Thêm thông tin chi tiết:</string>
    <string name="search_">Tìm kiếm…</string>
    <string name="history_notes">Lịch sử ghi chú</string>
    <string name="newfeed">Tin đăng</string>
    <string name="information">Thông tin</string>
    <string name="title_hashtag">Hashtag</string>
    <string name="email">Email</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="Address">Địa chỉ</string>
    <string name="dob">Ngày sinh</string>
    <string name="jobs">Nghề nghiệp</string>
    <string name="need">Nhu cầu</string>
    <string name="enter_description">Nhập mô tả</string>
    <string name="customer_name">Tên khách hàng</string>
    <string name="other_phone_numbers">Số điện thoại khác</string>
    <string name="hashtag_optional">Hashtag(tùy chọn)</string>
    <string name="dob_">Ngày sinh:</string>
    <string name="add_customer">Thêm khách hàng</string>
    <string name="icon_add" translatable="false">&#xf0fe;</string>
    <string name="icon_back" translatable="false">&#xf104;</string>
    <string name="icon_message" translatable="false">&#xf075;</string>
    <string name="icon_email" translatable="false">&#xf0e0;</string>
    <string name="icon_phone" translatable="false">&#xf095;</string>
    <string name="please_enter_full_name">Vui lòng nhập họ tên</string>
    <string name="customer_does_not_have_email">Khách hàng không có địa chỉ email</string>
    <string name="edit_note">Sửa ghi chú</string>
    <string name="select_customer">Chọn khách hàng</string>
    <string name="set_notification_schedule">Đặt lịch thông báo</string>
    <string name="preview_before">Nhắc trước (phút):</string>
    <string name="enter_title_note">Nhập tiêu đề ghi chú</string>
    <string name="detail">Chi tiết</string>
    <string name="update_information">Cập nhật thông tin</string>
    <string name="delete_customer">Xóa khách hàng</string>
    <string name="revoke">Bỏ</string>
    <string name="do_you_want_to_delete_this_customer">Bạn có muốn xóa khách hàng này không?</string>
    <string name="manage_friends">Quản lý bạn bè</string>
    <string name="agree">Đồng ý</string>
    <string name="friend_request">Lời mời kết bạn</string>
    <string name="enter_to_search_for_a_friend">Nhập tên, số điện thoại \n hoặc địa chỉ email để tìm kiếm bạn bè</string>
    <string name="already_requested">Đã yêu cầu</string>
    <string name="login">Đăng nhập</string>
    <string name="username_or_email">Tên đăng nhập hoặc email</string>
    <string name="password_">Mật khẩu *</string>
    <string name="email_address_incorrect">Địa chỉ email không đúng</string>
    <string name="password_contains_at_least_6_characters">Mật khẩu chứa tối thiểu 6 kí tự!</string>
    <string name="incorrect_password">Mật khẩu không đúng</string>
    <string name="this_field_required">Trường này bắt buộc</string>
    <string name="loading_">Đang tải dữ liệu…</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="phone_number_">Số điện thoại *</string>
    <string name="email_">Email *</string>
    <string name="display_name_">Tên hiển thị *</string>
    <string name="enter_your_registered_account">Nhập số điện thoại đăng kí của bạn</string>
    <string name="verification_codes">Mã xác thực</string>
    <string name="enter_password_">Nhập lại mật khẩu *</string>
    <string name="authenticate_new_password">Xác thực mật khẩu mới</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="register">Đăng ký</string>
    <string name="have_you_an_account_vn">Bạn đã có tài khoản?</string>
    <string name="register_now">Đăng ký ngay</string>
    <string name="username_">Tên đăng nhập *</string>
    <string name="username">Tên đăng nhập</string>
    <string name="confirm">Xác thực</string>
    <string name="submit">Gửi đi</string>
    <string name="resend_token">Gửi lại mã</string>
    <string name="please_do_not_leave_it_blank">Vui lòng không để trống!</string>
    <string name="invalid_phone_number">Số điện thoại không hợp lệ!</string>
    <string name="invalid_email">Email không hợp lệ!</string>
    <string name="passwords_do_not_match">Mật khẩu không khớp nhau</string>
    <string name="selection_job">Lựa chọn ngành nghề</string>
    <string name="new_notification">Thông báo mới</string>
    <string name="write_comment_">Viết bình luận…</string>
    <string name="description_">Mô tả *</string>
    <string name="continue_">Tiếp tục</string>
    <string name="get_new_password">Nhận mật khẩu mới</string>
    <string name="acreage">Diện tích</string>
    <string name="direction">Hướng chính</string>
    <string name="bedroom">Phòng ngủ</string>
    <string name="bathroom">Phòng tắm</string>
    <string name="year_of_manufacture">Năm sản xuất</string>
    <string name="status">Tình trạng</string>
    <string name="city">Tỉnh, thành</string>
    <string name="personal">Cá nhân</string>
    <string name="icon_drawer" translatable="false">&#xf0c9;</string>
    <string name="icon_sort" translatable="false">&#xf15d;</string>
    <string name="icon_filter" translatable="false">&#xf0b0;</string>
    <string name="font_icon_private" translatable="false">&#xf023;</string>
    <string name="font_icon_toolbar_right" translatable="false">&#xf142;</string>
    <string name="font_icon_toolbar_right_edit" translatable="false">&#xf044;</string>
    <string name="font_icon_public" translatable="false">&#xf0ac;</string>
    <string name="path_password_eye_mask_visible" translatable="false" tools:ignore="PrivateResource">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_strike_through" translatable="false" tools:ignore="PrivateResource">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye" translatable="false" tools:ignore="PrivateResource">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_strike_through" translatable="false" tools:ignore="PrivateResource">M3.27,4.27 L19.74,20.74</string>
    <string name="facebook_app_id" translatable="false">1412111772227959</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1412111772227959</string>
    <string name="web_client_id" translatable="false">846118602177-dulh69grt03h505m90hm7fd864o2vv3v.apps.googleusercontent.com</string>
    <string name="defaulImageUrl" translatable="false">http://cdn.csell.vn/categories/default.jpg</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="false">News</string>
    <string name="color">Màu sắc</string>
    <string name="note">Ghi chú</string>
    <string name="contact">Liên hệ</string>
    <string name="description_can_not_empty">Mô tả không được để trống</string>
    <string name="Description_at_least_10_words">Mô tả phải nhập ít nhất 10 từ</string>
    <string name="see_more">Xem thêm</string>
    <string name="comment">Bình luận</string>
    <string name="like">Thích</string>
    <string name="share">Chia sẻ</string>
    <string name="find_project">Tìm tên dự án</string>
    <string name="customer_not_found">Không tìm thấy khách hàng.</string>
    <string name="about">khoảng</string>
    <string name="district">Quận, huyện</string>
    <string name="address__">Địa chỉ *</string>
    <string name="please_enter_itle">Vui lòng nhập tiêu đề</string>
    <string name="today">Hôm nay</string>
    <string name="log_out">Đăng xuất</string>
    <string name="delete_note">Xóa Note</string>
    <string name="create_group">Tạo nhóm mới</string>
    <string name="find_friend_by_phone_email">Nhập số điện thoại hoặc email để tìm kiếm bạn bè</string>
    <string name="customers_in_this_group">Khách hàng trong nhóm này</string>
    <string name="edit_group">Chỉnh sửa nhóm</string>
    <string name="csell_password_forgotten_password">CSELL - Mã xác nhận quên mật khẩu</string>
    <string name="input">Nhập</string>
    <string name="add_private_content">Nội dung riêng tư</string>
    <string name="owner_information">Thông tin chủ sở hữu</string>
    <string name="cost_of_capital">Giá vốn</string>
    <string name="information_does_not_exist">Thông tin không tồn tại</string>
    <string name="text_list_sim_month_update_title">Danh sách sim cập nhập ngày</string>
    <string name="title_input_password">Xác thực mật khẩu bằng vân tay</string>
    <string name="title_scan_password">Đặt ngón tay của bạn vào chỗ quét vân tay</string>
    <string name="verify_fingerprint">Đăng nhập bằng vân tay</string>
    <string name="title_back_vn">Trở lại</string>
    <string name="text_info_project">Thông tin dự án</string>
    <string name="text_intro">Giới thiệu</string>
    <string name="text_field_project_investor">Chủ đầu tư:</string>
    <string name="text_project_total_acreage_build">Tổng diện tích:</string>
    <string name="text_project_acreage_build">Diện tích xây dựng:</string>
    <string name="text_project_price">Giá bán:</string>
    <string name="text_project_scale">Quy mô dự án:</string>
    <string name="text_project_type_development">Loại hình phát triển:</string>
    <string name="don_t_have_an_account">Bạn chưa có tài khoản?</string>
    <string name="get_a_new_password_and_back_to_stage">hãy nhận mật khẩu mới và quay trở lại</string>
    <string name="don_t_worry">Bạn đừng lo lắng,</string>
    <string name="please_type_the_captcha_code_in_the_text_below">Vui lòng nhập mã xác thực trong văn bản dưới đây:</string>
    <string name="please_enter_6_digit_code_sent_in_your_email">Vui lòng nhập mã gồm 6 chữ số đã được gửi đến email của bạn</string>
</resources>