<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_product"
        android:enabled="true"
        android:icon="@drawable/icon_selector_sanpham"
        android:title="@string/product" />

    <item
        android:id="@+id/navigation_contact"
        android:enabled="true"
        android:icon="@drawable/icon_selector_khachhang"
        android:title="@string/customer" />

    <item
        android:id="@+id/navigation_social"
        android:enabled="true"
        android:icon="@drawable/icon_selector_congdong"
        android:title="@string/social" />

    <item
        android:id="@+id/navigation_friend"
        android:enabled="true"
        android:icon="@drawable/icon_selector_banbe"
        android:title="@string/friend" />

    <item
        android:id="@+id/navigation_notification"
        android:enabled="true"
        android:icon="@drawable/icon_selector_thongbao"
        android:title="@string/notification" />


</menu>
