<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_100"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white_background_100" />

        <TextView
            style="@style/SF_B_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginTop="20dp"
            android:text="@string/text_info_project"
            android:textAllCaps="true"
            android:textColor="@color/text_title_detail_project" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/text_field_project_investor"
                style="@style/SF_R_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:text="@string/text_field_project_investor"
                android:textColor="@color/text_content_detail_project" />

            <TextView
                android:id="@+id/title_address"
                style="@style/SF_R_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:text="@string/address_"
                android:textColor="@color/text_content_detail_project" />

            <TextView
                android:id="@+id/text_project_total_acreage_build"
                style="@style/SF_R_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:text="@string/text_project_total_acreage_build"
                android:textColor="@color/text_content_detail_project" />

            <TextView
                android:id="@+id/text_project_acreage_build"
                style="@style/SF_R_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:text="@string/text_project_acreage_build"
                android:textColor="@color/text_content_detail_project" />

            <TextView
                android:id="@+id/text_project_type_development"
                style="@style/SF_R_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:text="@string/text_project_type_development"
                android:textColor="@color/text_content_detail_project" />

            <TextView
                android:id="@+id/text_project_price"
                style="@style/SF_R_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:text="@string/text_project_price"
                android:textColor="@color/text_content_detail_project" />

            <TextView
                android:id="@+id/text_project_scale"
                style="@style/SF_R_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:text="@string/text_project_scale"
                android:textColor="@color/text_content_detail_project" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white_background_100" />

        <TextView
            style="@style/SF_B_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginTop="20dp"
            android:text="@string/text_intro"
            android:textAllCaps="true"
            android:textColor="@color/text_title_detail_project" />

        <TextView
            android:id="@+id/txt_project_description"
            style="@style/SF_R_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:textColor="@color/text_content_detail_project" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white_background_100" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
