<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.9"
    android:background="#BF0A0F13">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_verify_fingerprint"
            style="@style/SF_M_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/verify_fingerprint"
            android:textAllCaps="true"
            android:textColor="@color/white_100" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_fingerprint_white_24dp" />

        <TextView
            android:id="@+id/tv_message"
            style="@style/SF_R_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/title_scan_password"
            android:textColor="@color/white_100" />

        <TextView
            android:id="@+id/tv_close"
            style="@style/SF_M_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/cancel"
            android:textColor="#ffffff" />


    </LinearLayout>

</RelativeLayout>