<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.9"
    android:background="#BF0A0F13"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_dialog_input_pass"
        style="@style/SF_M_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_input_password"
        android:textAllCaps="true"
        android:textColor="@color/white_100" />


    <EditText
        android:id="@+id/edt_input_password"
        style="@style/SF_M_14"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:background="@drawable/background_white"
        android:inputType="textPassword"
        android:paddingVertical="18dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/white_100"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/img_fingerprint"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_fingerprint_white_24dp" />

    <TextView
        android:id="@+id/tv_message"
        style="@style/SF_R_14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/title_scan_password"
        android:textColor="@color/white_100" />

    <TextView
        android:id="@+id/tv_confirm"
        style="@style/SF_M_18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/confirm"
        android:textColor="@color/white_100" />

    <TextView
        android:id="@+id/tv_cancel"
        style="@style/SF_M_18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cancel"
        android:textColor="@color/white_100" />

    <TextView
        android:id="@+id/tv_tutorial_verify"
        style="@style/SF_M_15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30sp"
        android:textColor="@color/white_100"
        android:textStyle="italic"
        android:visibility="visible" />

</LinearLayout>