<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:orientation="vertical"
    tools:mContext="csell.com.vn.csell.views.account.activity.ForgotPasswordActivity">

    <TextView
        android:id="@+id/btn_back_reset_password"
        style="@style/SF_M_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_10"
        android:drawableLeft="@drawable/ic_keyboard_arrow_left_dark_light_24dp"
        android:paddingVertical="@dimen/dp_10"
        android:paddingRight="@dimen/dp_20"
        android:text="@string/title_back_vn"
        android:textColor="@color/black_main" />


    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/frame_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/dp_34"
            android:paddingTop="@dimen/dp_70"
            android:visibility="visible">


            <LinearLayout
                android:id="@+id/item_title"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/SF_R_24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_worry"
                    android:textColor="@color/light_blue_100" />

                <TextView
                    style="@style/SF_R_24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/get_a_new_password_and_back_to_stage"
                    android:textColor="@color/dark_blue_50" />

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout3"
                style="@style/SF_R_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_60"
                android:textColorHint="@color/black_main_50">

                <EditText
                    android:id="@+id/txt_phone_verify"
                    style="@style/SF_R_16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_registered_account"
                    android:imeActionId="6"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingBottom="@dimen/dp_18"
                    android:singleLine="true"
                    android:textColor="@color/black_main" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    style="@style/SF_R_12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:text="@string/please_type_the_captcha_code_in_the_text_below"
                    android:textColor="@color/black_main_75" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_number_captcha"
                        style="@style/SF_B_20"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp_40"
                        android:gravity="center"
                        android:text="12345"
                        android:textColor="@color/black_main" />

                    <ImageView
                        android:id="@+id/img_refresh_capcha"
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/ic_autorenew" />

                </LinearLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout"
                    style="@style/SF_R_16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/black_main_50">

                    <EditText
                        android:id="@+id/txt_captcha_verify"
                        style="@style/SF_R_16"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/verification_codes"
                        android:imeActionId="6"
                        android:inputType="number"
                        android:maxLength="6"
                        android:maxLines="1"
                        android:paddingBottom="@dimen/dp_18"
                        android:singleLine="true"
                        android:textColor="@color/black_main" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>

    <Button
        android:id="@+id/btn_send_email_reset_password"
        style="@style/SF_B_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout"
        android:layout_marginStart="@dimen/dp_34"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_34"
        android:background="@drawable/background_btn_login"
        android:text="@string/get_new_password"
        android:textAllCaps="true"
        android:textColor="@color/white_100"
        android:visibility="visible" />

    <!-- frame_verify -->
    <LinearLayout
        android:id="@+id/frame_password_verify"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/dp_34"
        android:paddingTop="70dp"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/item_title_verify"
            android:layout_width="@dimen/dp_250"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/SF_R_24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Xác thực danh tính,"
                android:textColor="@color/light_blue_100" />

            <TextView
                style="@style/SF_R_24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_enter_6_digit_code_sent_in_your_email"
                android:textColor="@color/dark_blue_50" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/dp_280"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_70">

            <EditText
                android:id="@+id/txt_verify_token"
                style="@style/SF_M_36"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionId="6"
                android:imeOptions="actionUnspecified"
                android:inputType="number"
                android:maxLength="6"
                android:maxLines="1"
                android:paddingBottom="@dimen/dp_10"
                android:singleLine="true"
                android:textAlignment="center"
                android:textColor="@color/dark_blue_100" />


        </LinearLayout>

        <Button
            android:id="@+id/btn_submit_token"
            style="@style/SF_B_15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@drawable/background_btn_login"
            android:text="@string/submit"
            android:textAllCaps="true"
            android:textColor="@color/white_100" />

        <Button
            android:id="@+id/btn_resend_token"
            style="@style/SF_B_15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/background_btn_login"
            android:text="@string/resend_token"
            android:textAllCaps="true"
            android:textColor="@color/white_100" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_text_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/background_view_login" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/txt"
                style="@style/SF_R_14"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center|end"
                android:paddingEnd="5dp"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/dark_blue_75" />

            <TextView
                android:id="@+id/txt_signup"
                style="@style/SF_B_14"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/register_now"
                android:textColor="@color/blue_100" />

        </LinearLayout>

    </LinearLayout>

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_50"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

</RelativeLayout>
